# multitrust

./: .env-sample  .gitignore  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
doc/: dev_design.md  exp_api.md
docs/: api-surface.md  dev_design.md  examples.md  improvement_plan2.md  index.md  simplification_plan.md  versioning.md
docs/cookbook/: decay-tuning.md  drift.md  explanation-deltas.md  gating.md  ledger-configuration.md  schema-validation.md  snapshot-restore.md
examples/: authority_discounting.py  hallucination_firewall.py  multi_source_fusion.py  quickstart.py  schema_validation_rule.py  trust_decay.py
research/: Supplementary.txt  p332.txt
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-04-30-foundation-hardening/: plan.md  requirements.md  validation.md
specs/2026-05-02-adoption-onboarding/: plan.md  requirements.md  validation.md
specs/2026-05-02-trust-intelligence/: plan.md  requirements.md  validation.md
src/multitrust/: __init__.py
src/multitrust/config/: __init__.py  defaults.py  settings.py
src/multitrust/core/: __init__.py  _validators.py  errors.py  evidence.py  explanation.py  opinion.py  trust_record.py  types.py
src/multitrust/evaluation/: __init__.py  __main__.py  corpus.py  reporter.py  runner.py  scenario.py
src/multitrust/evidence/: __init__.py  collector.py  rules.py
src/multitrust/evidence/builtin/: __init__.py  consensus.py  latency.py  response_quality.py  schema_validation.py  task_completion.py
src/multitrust/integrations/: __init__.py
src/multitrust/integrations/anthropic/: __init__.py  hooks.py  tools.py
src/multitrust/integrations/crewai/: __init__.py  callbacks.py  middleware.py
src/multitrust/integrations/generic/: __init__.py  context.py  decorators.py
src/multitrust/integrations/google_adk/: __init__.py  callbacks.py
src/multitrust/integrations/langgraph/: __init__.py  edges.py  nodes.py  state.py
src/multitrust/integrations/mcp/: __init__.py  server.py  tools.py
src/multitrust/integrations/openai_agents/: __init__.py  guardrails.py  tools.py
src/multitrust/intelligence/: __init__.py  drift.py
src/multitrust/manager/: __init__.py  admin.py  policy.py  sync.py  timeline.py  trust_authority.py  trust_manager.py
src/multitrust/observability/: __init__.py  events.py  logging.py  metrics.py  tracing.py
src/multitrust/operators/: __init__.py  constants.py  decay.py  discount.py  fusion.py  mapping.py  normalize.py
src/multitrust/storage/: __init__.py  _errors.py  base.py  evidence_ledger.py  memory.py  memory_ledger.py  redis_store.py  sqlite.py  sqlite_ledger.py
state/: cancel-signal-state.json
tests/: conftest.py  test_evidence_ledger.py  test_explain_integration.py  test_explanation.py
tests/config/: test_env_config.py
tests/contracts/: README.md  __init__.py  _registry.py  conftest.py  test_langgraph_contract.py  test_openai_agents_contract.py  test_tier1_invariants.py
tests/core/: test_evidence.py  test_opinion.py
tests/evaluation/: test_corpus.py  test_reporter.py  test_runner.py  test_scenario.py
tests/evidence/: test_builtin_consensus.py  test_builtin_latency.py  test_builtin_response_quality.py  test_builtin_schema_validation.py  test_builtin_task_completion.py  test_callback_collector.py  test_collector.py  test_rules.py
tests/examples/: test_examples_smoke.py
tests/integration/: test_decay_lifecycle.py  test_storage_roundtrip.py
tests/integrations/: test_generic.py  test_langgraph.py  test_mcp.py  test_openai_agents.py
tests/intelligence/: test_drift.py
tests/manager/: test_admin.py  test_explain.py  test_feat2_5_6.py  test_policy.py  test_sync_manager.py  test_timeline.py  test_trust_authority.py  test_trust_manager.py
tests/observability/: test_otel_logging.py  test_otel_tracing.py
tests/operators/: test_constants.py  test_decay.py  test_discount.py  test_evidence_decay.py  test_fusion.py  test_fusion_stability.py  test_mapping.py  test_normalize.py  test_paper_examples.py  test_stability.py
tests/policies/: test_threshold_uncertainty.py
tests/storage/: test_memory_store.py  test_redis_store.py  test_sqlite_store.py
