[project]
name = "multitrust"
version = "0.1.0"
description = "A Trust Framework SDK for Multi-Agent Systems based on Subjective Logic"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Dr. Nobel Khandaker", email = "nobel@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
config = ["pydantic-settings>=2.0"]
logging = ["structlog>=24.0"]
sqlite = ["aiosqlite>=0.20"]
redis = ["redis[hiredis]>=5.0"]
postgres = ["asyncpg>=0.29"]
metrics = ["prometheus-client>=0.20"]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.50"]
openai = ["openai-agents>=0.1"]
adk = ["google-adk>=0.1"]
anthropic = ["anthropic>=0.30"]
full = [
    "multitrust[config,logging,sqlite,redis,postgres,metrics,langgraph,crewai,openai,adk,anthropic]"
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.11",
    "mypy>=1.10",
]

[project.scripts]
multitrust = "multitrust:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multitrust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "benchmark: marks performance benchmarks",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "structlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite"
ignore_missing_imports = true
