[project]
name = "multitrust"
version = "0.1.0"
description = "A Trust Framework SDK for Multi-Agent Systems based on Subjective Logic"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Dr. Nobel Khandaker", email = "nobel@outlook.com" }
]
requires-python = ">=3.10"
keywords = [
    "trust",
    "multi-agent",
    "subjective-logic",
    "agents",
    "ai-safety",
    "trust-framework",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
config = ["pydantic-settings>=2.0"]
logging = ["structlog>=24.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
sqlite = ["aiosqlite>=0.20"]
redis = ["redis>=5.0"]
metrics = ["prometheus-client>=0.20"]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.50"]
openai = ["openai-agents>=0.1"]
adk = ["google-adk>=0.1"]
anthropic = ["anthropic>=0.30"]
full = [
    "multitrust[config,logging,otel,sqlite,redis,metrics,langgraph,crewai,openai,adk,anthropic]"
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.11",
    "mypy>=1.10",
    "fakeredis>=2.35",
    "redis>=5.0",
    "lupa>=2.8",
]

[project.urls]
Homepage = "https://github.com/nobelk/multitrust"
Repository = "https://github.com/nobelk/multitrust"
Documentation = "https://github.com/nobelk/multitrust#readme"
Changelog = "https://github.com/nobelk/multitrust/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/nobelk/multitrust/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multitrust"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/.hypothesis",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/.omc",
    "/.omx",
    "/dist",
    "/state",
    "/doc",
    "/examples",
    "/research",
    "coverage.xml",
    ".coverage",
    ".env-sample",
    ".python-version",
    "uv.lock",
    "example.md",
    "improvement_plan.md",
    "CLAUDE.md",
    "COMPATIBILITY.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "benchmark: marks performance benchmarks",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "structlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
